// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationLink /> when newWindow is true matches its snapshot 1`] = `
<a
  className="y-navigationLink y-focus-normal"
  href="test.html"
  rel="nofollow noopener noreferrer"
  target="_blank"
>
  link content
</a>
`;

exports[`<NavigationLink /> when unstyled matches its snapshot 1`] = `
<a
  className="y-navigationLink y-navigationLink__unstyled y-focus-normal"
  href="test.html"
>
  link content
</a>
`;

exports[`<NavigationLink /> with additional className matches its snapshot 1`] = `
<a
  className="y-navigationLink y-focus-normal TEST_CLASSNAME"
  href="test.html"
>
  test content
</a>
`;

exports[`<NavigationLink /> with default options matches its snapshot 1`] = `
<a
  className="y-navigationLink y-focus-normal"
  href="test.html"
>
  link content
</a>
`;

exports[`<NavigationLink /> with title matches its snapshot 1`] = `
<a
  className="y-navigationLink y-focus-normal"
  href="test.html"
  title="TITLE CONTENT"
>
  link content
</a>
`;
